[gd_scene load_steps=21 format=2]

[ext_resource path="res://objects/Factory.gd" type="Script" id=1]
[ext_resource path="res://fonts/RobotoCondensed-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://sprites/Factory.png" type="Texture" id=3]
[ext_resource path="res://animations/Objectssway_standard.tres" type="Animation" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 32, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 48, 16, 16, 16 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), null ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=15]
resource_name = "Sway"

[sub_resource type="Animation" id=16]
resource_name = "sway"
length = 3.0
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.75, 1.5, 2.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -5.0, 0.0, 5.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.75, 1.5, 2.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 4, 4 ), Vector2( 4.2, 4.2 ), Vector2( 4, 4 ), Vector2( 4.2, 4.2 ) ]
}

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 5.75, 7.75 )

[sub_resource type="CircleShape2D" id=13]

[sub_resource type="DynamicFont" id=14]
size = 32
font_data = ExtResource( 2 )

[node name="Factory" type="Node2D"]
scale = Vector2( 4, 4 )
z_index = -1
script = ExtResource( 1 )

[node name="Structure" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )

[node name="BuildSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 11 )

[node name="BuildProgressTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Objectssway = ExtResource( 4 )
anims/Sway = SubResource( 15 )
anims/sway = SubResource( 16 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 12 )

[node name="BuildTime" type="Timer" parent="."]
one_shot = true

[node name="Spawn" type="Position2D" parent="."]
position = Vector2( -1.75, 10.5 )

[node name="FactoryArea" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="FactoryArea"]
shape = SubResource( 13 )

[node name="InteractPanel" type="Control" parent="."]
visible = false
margin_left = -8.75
margin_top = -10.75
margin_right = 169.25
margin_bottom = 29.25
rect_scale = Vector2( 0.1, 0.1 )

[node name="Panel" type="Panel" parent="InteractPanel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="InteractPanel/Panel"]
margin_right = 173.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 14 )
text = "'E' to Interact"
align = 1
valign = 1

[connection signal="timeout" from="BuildProgressTimer" to="." method="_on_BuildProgressTimer_timeout"]
[connection signal="timeout" from="BuildTime" to="." method="_on_BuildTime_timeout"]
[connection signal="body_entered" from="FactoryArea" to="." method="_on_FactoryArea_body_entered"]
[connection signal="body_exited" from="FactoryArea" to="." method="_on_FactoryArea_body_exited"]
